js/js.translator/testData/incremental/invalidation/exceptionsFromInlineFunction/lib1/l1.5.kt
inline fun foo() : Int {
    throw NumberFormatException()
    return 5
}
